--- a/package.json
+++ b/package.json
@@ -57,12 +57,14 @@
     "animate.css": "^4.0",
     "bootstrap": "^4.1",
     "chart.js": "^2.7",
+    "datatables.net-dt": "^1.10.21",
     "fullcalendar": "^3.9.0",
     "gmaps": "^0.4.24",
     "jquery": "^3.3",
     "jvectormap-next": "^2.0.4",
     "metismenu": "^3.0.3",
-    "moment": "^2.23.0",
+    "moment": "^2.27.0",
+    "pdfmake": "^0.1.68",
     "pe7-icon": "^1.0.4",
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.14",
