--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "pe7-icon": "^1.0.4",
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.14",
+    "tempusdominus-bootstrap-4": "^5.1.2",
     "toastr": "^2.1.4",
     "wnumb": "^1.1.0",
     "xlsx": "^0.16.7",
